tree-sitter-jabber/test/corpus/enum_declarations.txt
==============================
uninhabited enum declarations
==============================

pub enum Uninhabited {}

-------------------------------

(source_file
  (enum_decl
    visibility: (access_spec)
    name: (ident)
    variants: (enum_variants)))

=================
unit enum fields
=================

enum Direction {
  North,
  East,
  South,
  West,
}

----------------------------

(source_file
  (enum_decl
    name: (ident)
    variants: (enum_variants
      (enum_variant
        name: (ident))
      (enum_variant
        name: (ident))
      (enum_variant
        name: (ident))
      (enum_variant
        name: (ident)))))

==========================
generic enum declarations
==========================

enum Result[T, E] {
  Ok(T),
  Err(E),
}

enum Option[T] {
  Some(T),
  None,
}

----------------------------------

(source_file
  (enum_decl
    name: (ident)
    params: (generic_params
      (ident)
      (ident))
    variants: (enum_variants
      (enum_variant
        name: (ident)
        payload: (enum_payload
          (ident)))
      (enum_variant
        name: (ident)
        payload: (enum_payload
          (ident)))))
  (enum_decl
    name: (ident)
    params: (generic_params
      (ident))
    variants: (enum_variants
      (enum_variant
        name: (ident)
        payload: (enum_payload
          (ident)))
      (enum_variant
        name: (ident)))))
