tree-sitter-jabber/test/corpus/struct_expressions.txt
==========================
singleton struct literals
==========================

const S: _ = Foo { }

---------------------------

(source_file
  decl: (const_decl
    name: (ident)
    type: (inferred_type)
    value: (struct_expr
      name: (ident))))

==========================
functional struct updates
==========================

const S: _ = Something {
  a: 13,
  b: (),
  ..c,
}

---------------------------

(source_file
  decl: (const_decl
    name: (ident)
    type: (inferred_type)
    value: (struct_expr
      name: (ident)
      fields: (struct_expr_fields
        (struct_expr_field
          name: (ident)
          value: (dec_literal))
        (struct_expr_field
          name: (ident)
          value: (unit_literal))
        (struct_update_base (ident))))))
